--- a/src/configure.in
+++ b/src/configure.in
@@ -1281,6 +1281,13 @@ if test "$enable_rxvt_osc" = "yes"; then
   AC_DEFINE(RXVT_OSC)
 fi
 
+AC_ARG_ENABLE(macim, [  --enable-macim          enable support for MacIM control])
+if test "$enable_macim" = "yes"; then
+  OFILES_MACIM=macim.o
+  AC_SUBST(OFILES_MACIM)
+  AC_DEFINE(MACIM)
+fi
+
 dnl
 dnl    ****  the end  ****
 dnl
