--- a/src/configure.in
+++ b/src/configure.in
@@ -1281,6 +1281,17 @@ if test "$enable_rxvt_osc" = "yes"; then
   AC_DEFINE(RXVT_OSC)
 fi
 
+AC_ARG_ENABLE(nosuid, [  --enable-nosuid         build screen without suid])
+if test "$enable_nosuid" = "yes"; then
+  screen_mode=755
+else
+  screen_mode=4755
+  AC_DEFINE(UTMPOK)
+  AC_DEFINE(LOGINDEFAULT)
+  AC_DEFINE(LOGOUTOK)
+fi
+AC_SUBST(screen_mode)
+
 AC_ARG_ENABLE(macim, [  --enable-macim          enable support for MacIM control])
 if test "$enable_macim" = "yes"; then
   OFILES_MACIM=macim.o
